dataset1235/2025-2/1153765216/users/896391410/executions/2372395858_2249045874.log
== SUBMISSION (2025-08-28 18:44:35)
-- CODE: 
import math

lado = float(input("Digite o lado:"))
# faça seu código a
octogono = lado / (2* math.tan(math.pi/8))

4 * lado * octogono
print(round(lado, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
4
---- correct output:
77.25
---- user output:
Digite o lado:4.0
-- TEST CASE 2:
---- input:
8
---- correct output:
309.02
---- user output:
Digite o lado:8.0
-- TEST CASE 3:
---- input:
5
---- correct output:
120.71
---- user output:
Digite o lado:5.0
-- TEST CASE 4:
---- input:
5
---- correct output:
120.71
---- user output:
Digite o lado:5.0
-- TEST CASE 5:
---- input:
9
---- correct output:
391.1
---- user output:
Digite o lado:9.0
-- TEST CASE 6:
---- input:
6
---- correct output:
173.82
---- user output:
Digite o lado:6.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:42:38)
-- CODE: 
math import

lado = float(input("Digite o lado:"))
# faça seu código a
octogono = lado / (2* math.tan(math.pi/8))

4 * lado * octogono
print(round(x, z))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
77.25
-- ERROR:
File "XXXX", line 1
    math import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
8
---- correct output:
309.02
-- ERROR:
File "XXXX", line 1
    math import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5
---- correct output:
120.71
-- ERROR:
File "XXXX", line 1
    math import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
5
---- correct output:
120.71
-- ERROR:
File "XXXX", line 1
    math import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
9
---- correct output:
391.1
-- ERROR:
File "XXXX", line 1
    math import
         ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
6
---- correct output:
173.82
-- ERROR:
File "XXXX", line 1
    math import
         ^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:45:33)
-- CODE: 
import math

lado = float(input("Digite o lado:"))
# faça seu código a
octogono = lado / (2* math.tan(math.pi/8))

4 * lado * octogono
print(round(lado, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
4
---- correct output:
77.25
---- user output:
Digite o lado:4.0
-- TEST CASE 2:
---- input:
8
---- correct output:
309.02
---- user output:
Digite o lado:8.0
-- TEST CASE 3:
---- input:
5
---- correct output:
120.71
---- user output:
Digite o lado:5.0
-- TEST CASE 4:
---- input:
5
---- correct output:
120.71
---- user output:
Digite o lado:5.0
-- TEST CASE 5:
---- input:
9
---- correct output:
391.1
---- user output:
Digite o lado:9.0
-- TEST CASE 6:
---- input:
6
---- correct output:
173.82
---- user output:
Digite o lado:6.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:39:08)
-- CODE: 
from math import *

lado = float(input("Digite o lado:"))
# faça seu código a
octogono = lado / (2* math.tan(math.pi/8))

4 * lado * octogono
print(round(x, z))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
77.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    octogono = lado / (2* math.tan(math.pi/8))
                          ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
8
---- correct output:
309.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    octogono = lado / (2* math.tan(math.pi/8))
                          ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
5
---- correct output:
120.71
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    octogono = lado / (2* math.tan(math.pi/8))
                          ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
5
---- correct output:
120.71
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    octogono = lado / (2* math.tan(math.pi/8))
                          ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
9
---- correct output:
391.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    octogono = lado / (2* math.tan(math.pi/8))
                          ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
6
---- correct output:
173.82
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    octogono = lado / (2* math.tan(math.pi/8))
                          ^^^^
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:45:35)
-- CODE: 
import math

lado = float(input("Digite o lado:"))
# faça seu código a
octogono = lado / (2* math.tan(math.pi/8))

4 * lado * octogono
print(round(lado, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
77.25
---- user output:
Digite o lado:4.0
-- TEST CASE 2:
---- input:
8
---- correct output:
309.02
---- user output:
Digite o lado:8.0
-- TEST CASE 3:
---- input:
5
---- correct output:
120.71
---- user output:
Digite o lado:5.0
-- TEST CASE 4:
---- input:
5
---- correct output:
120.71
---- user output:
Digite o lado:5.0
-- TEST CASE 5:
---- input:
9
---- correct output:
391.1
---- user output:
Digite o lado:9.0
-- TEST CASE 6:
---- input:
6
---- correct output:
173.82
---- user output:
Digite o lado:6.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:42:56)
-- CODE: 
import.math

lado = float(input("Digite o lado:"))
# faça seu código a
octogono = lado / (2* math.tan(math.pi/8))

4 * lado * octogono
print(round(x, z))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
77.25
-- ERROR:
File "XXXX", line 1
    import.math
          ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
8
---- correct output:
309.02
-- ERROR:
File "XXXX", line 1
    import.math
          ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5
---- correct output:
120.71
-- ERROR:
File "XXXX", line 1
    import.math
          ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
5
---- correct output:
120.71
-- ERROR:
File "XXXX", line 1
    import.math
          ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
9
---- correct output:
391.1
-- ERROR:
File "XXXX", line 1
    import.math
          ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
6
---- correct output:
173.82
-- ERROR:
File "XXXX", line 1
    import.math
          ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:51:59)
-- CODE: 
import math

lado = float(input("Digite o lado:"))
# faça seu código a
octogono = lado / (2* math.tan(math.pi/8))

var = 4 * lado * octogono

print(round(var, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
4
---- correct output:
77.25
---- user output:
Digite o lado:77.25
-- TEST CASE 2:
---- input:
8
---- correct output:
309.02
---- user output:
Digite o lado:309.02
-- TEST CASE 3:
---- input:
5
---- correct output:
120.71
---- user output:
Digite o lado:120.71
-- TEST CASE 4:
---- input:
5
---- correct output:
120.71
---- user output:
Digite o lado:120.71
-- TEST CASE 5:
---- input:
9
---- correct output:
391.1
---- user output:
Digite o lado:391.1
-- TEST CASE 6:
---- input:
6
---- correct output:
173.82
---- user output:
Digite o lado:173.82
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:50:05)
-- CODE: 
import math

lado = float(input("Digite o lado:"))
# faça seu código a
octogono = lado / (2* math.tan(math.pi/8))

4 * lado * octogono

print(round(x , n))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
77.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(x , n))
                ^
NameError: name 'x' is not defined
-- TEST CASE 2:
---- input:
8
---- correct output:
309.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(x , n))
                ^
NameError: name 'x' is not defined
-- TEST CASE 3:
---- input:
5
---- correct output:
120.71
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(x , n))
                ^
NameError: name 'x' is not defined
-- TEST CASE 4:
---- input:
5
---- correct output:
120.71
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(x , n))
                ^
NameError: name 'x' is not defined
-- TEST CASE 5:
---- input:
9
---- correct output:
391.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(x , n))
                ^
NameError: name 'x' is not defined
-- TEST CASE 6:
---- input:
6
---- correct output:
173.82
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(x , n))
                ^
NameError: name 'x' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:50:19)
-- CODE: 
import math

lado = float(input("Digite o lado:"))
# faça seu código a
octogono = lado / (2* math.tan(math.pi/8))

4 * lado * octogono

print(round(octogono, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
4
---- correct output:
77.25
---- user output:
Digite o lado:4.83
-- TEST CASE 2:
---- input:
8
---- correct output:
309.02
---- user output:
Digite o lado:9.66
-- TEST CASE 3:
---- input:
5
---- correct output:
120.71
---- user output:
Digite o lado:6.04
-- TEST CASE 4:
---- input:
5
---- correct output:
120.71
---- user output:
Digite o lado:6.04
-- TEST CASE 5:
---- input:
9
---- correct output:
391.1
---- user output:
Digite o lado:10.86
-- TEST CASE 6:
---- input:
6
---- correct output:
173.82
---- user output:
Digite o lado:7.24
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:39:56)
-- CODE: 
import math *

lado = float(input("Digite o lado:"))
# faça seu código a
octogono = lado / (2* math.tan(math.pi/8))

4 * lado * octogono
print(round(x, z))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
77.25
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
8
---- correct output:
309.02
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5
---- correct output:
120.71
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
5
---- correct output:
120.71
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
9
---- correct output:
391.1
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
6
---- correct output:
173.82
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:42:20)
-- CODE: 
from math 

lado = float(input("Digite o lado:"))
# faça seu código a
octogono = lado / (2* math.tan(math.pi/8))

4 * lado * octogono
print(round(x, z))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
77.25
-- ERROR:
File "XXXX", line 1
    from math 
              ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
8
---- correct output:
309.02
-- ERROR:
File "XXXX", line 1
    from math 
              ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5
---- correct output:
120.71
-- ERROR:
File "XXXX", line 1
    from math 
              ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
5
---- correct output:
120.71
-- ERROR:
File "XXXX", line 1
    from math 
              ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
9
---- correct output:
391.1
-- ERROR:
File "XXXX", line 1
    from math 
              ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
6
---- correct output:
173.82
-- ERROR:
File "XXXX", line 1
    from math 
              ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:39:49)
-- CODE: 
import math

lado = float(input("Digite o lado:"))
# faça seu código a
octogono = lado / (2* math.tan(math.pi/8))

4 * lado * octogono
print(round(x, z))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
77.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(x, z))
                ^
NameError: name 'x' is not defined
-- TEST CASE 2:
---- input:
8
---- correct output:
309.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(x, z))
                ^
NameError: name 'x' is not defined
-- TEST CASE 3:
---- input:
5
---- correct output:
120.71
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(x, z))
                ^
NameError: name 'x' is not defined
-- TEST CASE 4:
---- input:
5
---- correct output:
120.71
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(x, z))
                ^
NameError: name 'x' is not defined
-- TEST CASE 5:
---- input:
9
---- correct output:
391.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(x, z))
                ^
NameError: name 'x' is not defined
-- TEST CASE 6:
---- input:
6
---- correct output:
173.82
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(x, z))
                ^
NameError: name 'x' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
